# console-test

./: .env  .env.develop  .env.main  .gitignore  README.md  config.py  conftest.py  helpers.py  pyproject.toml
.github/workflows/: playwright python.yml  playwright.yml  playwrightPython.yml
Scenarios/: test_fuzzing.py  test_referrals_scenario.py
actions/: submit_order.py  utils.py  vega.py
fixtures/: market.py
marketFixtures/continuousMarket/: continuousMarket.py
market_fixtures/opening_auction_market/: opening_auction_market.py
market_fixtures/simple_market/: simple_market.py
tests/assets/: test_assets.py
tests/basic/: test_basic.py
tests/chart_depth/: test_chart_depth.py
tests/deal_ticket/: test_basic_submit.py  test_deal_ticket_basics.py  test_fees_margin_estimations.py  test_stop_order.py  test_stop_order_oco.py  test_trading_deal_ticket_submit_account.py
tests/get_started/: test_get_started.py
tests/iceberg_orders/: test_iceberg_orders.py
tests/liquidity_provision/: test_liquidity_provision.py
tests/market/: test_closed_markets.py  test_market.py  test_market_info.py  test_market_selector.py  test_markets_all.py  test_markets_proposed.py  test_monitoring_auction_price_volatility_market.py
tests/market_lifecycle/: test_market_lifecycle.py
tests/navigation/: test_navigation.py
tests/order/: test_order_match.py  test_order_status.py
tests/order_details/: test_order_details.py
tests/order_match/: test_order_match.py
tests/orderbook/: test_orderbook.py
tests/pnl/: test_pnl.py
tests/portfolio/: test_ledger_entries.py
(+12 files in other folders)
